added company check to auth controllers, added registerCompany controller
